[package]
name = "file_classed"
version = "0.1.0"
edition = "2018"
description = "Efficient yet customizable file organizer"
license = "GPL-3.0-or-later"
author = "Elie Le Vaillant <elielevaillant2007@gmail.com>"
homepage = "https://gitlab.com/Eolien55/ScolarSorted"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
human-panic = "1.0"
dirs = "4.0"
exitcode = "1.1"
ctrlc = "3.2"
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.8"
shellexpand = "2.1"
scan_dir = "0.3"
chrono = "0.4"
locale = "0.2"

[[bin]]
name = "fcs"
path = "src/main.rs"