[package]
name = "fcs"
version = "1.3.8"
edition = "2018"
description = "Efficient yet customizable file organizer"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Eolien55/FileClassed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human-panic = "1.0"
exitcode = "1.1"
ctrlc = { version = "3.2", features = ["termination"] }

serde = {version = "1", features = ["derive"]}
serde_yaml = "0.8"

dirs-next = "2.0"
shellexpand = "2.1"
scan_dir = "0.3"
locale = "0.2"
chrono = "0.4"

rayon = "1.5"

log = "0.4"
simple_logger = {version = "1.13", default_features = false, features = ["colors"]}

structopt = "0.3"
clap-verbosity-flag = "0.3"

quote = "1.0"

[[bin]]
name = "fcs"
path = "src/main.rs"

[lib]
name = "fcs"
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
path = "benchmark/benchmark.rs"
harness = false
